out/production/ASPCore2-Parser/parser/Parser.jjt
options{
    ERROR_REPORTING = true;
    MULTI = true;
    VISITOR = true;
    NODE_DEFAULT_VOID=true;
    NODE_PREFIX = "ASPCore2";

}

PARSER_BEGIN(Parser)

public class Parser
{
    public static void main(String args[]) throws ParseException
        {
            Parser parser = new Parser(System.in);
            try{
                ASPCore2Program start = parser.program();
                start.dump("");
                //start.jjtAccept(visitor,null);
            }catch(Exception e){
                System.out.println("Oops.");
                System.out.println(e.getMessage());
            }
           // SimpleNode root = parser.program();
           // root.dump("");
            //parser.rule();
        }
}
PARSER_END(Parser)
SKIP :
{
    " "
|   "\r"
|   "\t"
}
TOKEN:{
    < NAF: "not">
}
TOKEN:
{
    < ID: ["a"-"z"](<LETTER>| <NUMBER> | "_")*>
|   < SYMBOLIC_COSTANT: ["a"-"z"](<LETTER> | <NUMBER> | "_")*>
|   < VARIABLE: ["A"-"Z"](<LETTER> | <NUMBER> | "_")*>
|   < STRING: "\"([ˆ\"]|\\\")*\"">
|   < NUMBER: (["0"-"9"])+ >
|   < DOT: ".">
|   < BODY_TERM_SEPARATOR: ",">
//|   < TERM_SEPARATOR: ",">
|   < QUERY_MARK: "?">
|   < COLON: ":">
|   < SEMICOLON: ";">
|   < HEAD_SEPARATOR: "|">
|   < CONS: ":-">
|   < WCONS: ":~">
|   < PLUS: "+">
|   < MINUS: "-">
|   < TIMES: "*">
|   < DIV: "/">
|   < PARAM_OPEN: "(">
|   < PARAM_CLOSE: ")">
|   < SQUARE_OPEN: "[">
|   < SQUARE_CLOSE: "]">
|   < CURLY_OPEN: "{">
|   < CURLY_CLOSE: "}">
|   < EQUAL: "=">
|   < UNEQUAL: "<>" | "!=">
|   < LESS: "<">
|   < GREATER: ">">
|   < LESS_OR_EQ: "<=">
|   < GREATER_OR_EQ: ">=">
|   < AGGR_COUNT: "#count">
|   < AGGR_SUM: "#sum">
|   < AGGR_MAX: "#max">
|   < AGGR_MIN: "#min">
|   < COMMENT: "%.*$">
|   < MULTI_LINE_COMMENT: "/%.*%/">
//|   < BLANK: (" " | "\t"| "\n")+>
|   < LETTER: ["A"-"Z","a"-"z"]>
|   < AT: "@">
|   < EOL: "\n" >
|   < ANON_VAR:"_">
}

void parseOneLine() #Parse_one_line:{}
{
   program()
  | <EOL>
  | <EOF>               { System.exit(-1); }
}

ASPCore2Program program() #Program:{}
{
    rules() {return jjtThis;}
}

void rules() #Rules:{}
{
    [rule() rules()]
}

boolean rule() #Rule:{}
{
    <CONS> body() <DOT> {return true;}
|    head() [<CONS> body()] <DOT>  {return true;}
|   <WCONS> body() <DOT> {return true;}

}

void head() #Head:{}
{
    disjunction() |
     choice_atom()
}

void body() #Body:{}
{
    conjunction()
}

void disjunction() #Disjunction:{}
{
     classic_literal() [<HEAD_SEPARATOR> disjunction()]
}

void conjunction() #Conjunction:{}
{
    (LOOKAHEAD(3) naf_literal() | [<NAF>] aggregate_atom())
    [<BODY_TERM_SEPARATOR> conjunction()]
}

void choice_atom() #Choice_atom:{}
{
    [binop() term()] <CURLY_OPEN> choice_elements() <CURLY_CLOSE> [binop() term()]
}

void choice_elements() #Choice_elements:{}
{
     choice_element() [<SEMICOLON> choice_elements()]
}

void choice_element() #Choice_element:{}
{
   atom() [<COLON> naf_literals()]
}

void binop() #Binop:{}
{
    <EQUAL>
    |   <UNEQUAL>
    |   <LESS>
    |   <GREATER>
    |   <LESS_OR_EQ>
    |   <GREATER_OR_EQ>
}

void arithop() #Arithop:{}
{
    <PLUS>
    |   <MINUS>
    |   <TIMES>
    |   <DIV>
}

void aggregate_atom() #Aggregate_atom:{}
{
    LOOKAHEAD(5)
    [term() binop()] aggregate_function()
            <CURLY_OPEN> aggregate_elements() <CURLY_CLOSE> binop() term()
    |   term() binop() aggregate_function()
                <CURLY_OPEN> aggregate_elements() <CURLY_CLOSE> [binop() term()]
}

void aggregate_elements() #Aggregate_elements:{}
{
     aggregate_element() [<SEMICOLON> aggregate_elements() ]
}

void aggregate_element() #Aggregate_element:{}
{
    basic_terms() <COLON> naf_literals()
}

void aggregate_function() #Aggregate_function:{}
{
    <AGGR_COUNT>
    |   <AGGR_MAX>
    |   <AGGR_MIN>
    |   <AGGR_SUM>
}

void atom() #Atom:{}
{
    predicate_name() [<PARAM_OPEN> [terms()] <PARAM_CLOSE>]
}

void builtin_atom() #Builtin_atom:{}
{
    term() binop() term()
}

void classic_literal() #Classic_literal:{}
{
    [<MINUS>] atom()
}

void naf_literals() #Naf_literals:{}
{
     naf_literal() [<BODY_TERM_SEPARATOR> naf_literals() ]
}

void naf_literal() #Naf_literal:{}
{
    LOOKAHEAD(3)
    [<NAF>] classic_literal() | builtin_atom()
}

void terms() #Terms:{}
{
     term() [<BODY_TERM_SEPARATOR> terms() ]
}

void basic_terms() #Basic_terms:{}
{
      basic_term() [<BODY_TERM_SEPARATOR> basic_terms() ]
}

void term() #Term:{}
{
    (LOOKAHEAD(3)
    basic_term()
    |   expressions_term()
    |   function_term()
    )
}

void basic_term() #Basic_term:{}
{
    ground_term() | variable_term()
}

void ground_term() #Ground_term:{}
{
    <SYMBOLIC_COSTANT>
    |   <STRING>
    |    [<MINUS>] <NUMBER>
}

void variable_term() #Variable_term:{}
{
    <VARIABLE>
    |   <ANON_VAR>
}

void function_term() #Function_term:{}
{
    predicate_name() <PARAM_OPEN> terms() <PARAM_CLOSE>
}

void expressions_term() #Expressions_term:{}
{
    expression_term() [arithop() expressions_term()]
}
void expression_term() #Expression_term:{}
{

       <PARAM_OPEN> expression_term() <PARAM_CLOSE>
    |(   LOOKAHEAD(2)
     ground_term()
    | [<MINUS>] <VARIABLE>
    )
}
void predicate_name() #Predicate_name:{}
{
    <ID> | <STRING>
}
