src/Parser.java
/* Parser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();public static void main(String args[]) throws ParseException
        {
            Parser parser = new Parser(System.in);
            SimpleNode root = parser.program();
            root.dump("");
            //parser.rule();
        }

  static final public void parseOneLine() throws ParseException {/*@bgen(jjtree) parseOneLine */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSEONELINE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      program();
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public SimpleNode program() throws ParseException {/*@bgen(jjtree) program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      rules();
jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void rules() throws ParseException {/*@bgen(jjtree) rules */
  SimpleNode jjtn000 = new SimpleNode(JJTRULES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:
      case STRING:
      case CONS:
      case WCONS:
      case MINUS:
      case CURLY_OPEN:
      case EQUAL:
      case UNEQUAL:
      case LESS:
      case GREATER:
      case LESS_OR_EQ:
      case GREATER_OR_EQ:{
        rule();
        rules();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public boolean rule() throws ParseException {/*@bgen(jjtree) RULE */
  SimpleNode jjtn000 = new SimpleNode(JJTRULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONS:{
        jj_consume_token(CONS);
        body();
        jj_consume_token(DOT);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
{if ("" != null) return true;}
        break;
        }
      case ID:
      case STRING:
      case MINUS:
      case CURLY_OPEN:
      case EQUAL:
      case UNEQUAL:
      case LESS:
      case GREATER:
      case LESS_OR_EQ:
      case GREATER_OR_EQ:{
        head();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CONS:{
          jj_consume_token(CONS);
          body();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(DOT);
jjtree.closeNodeScope(jjtn000, true);
                                     jjtc000 = false;
{if ("" != null) return true;}
        break;
        }
      case WCONS:{
        jj_consume_token(WCONS);
        body();
        jj_consume_token(DOT);
jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
{if ("" != null) return true;}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void head() throws ParseException {/*@bgen(jjtree) HEAD */
  SimpleNode jjtn000 = new SimpleNode(JJTHEAD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:
      case STRING:
      case MINUS:{
        disjunction();
        break;
        }
      case CURLY_OPEN:
      case EQUAL:
      case UNEQUAL:
      case LESS:
      case GREATER:
      case LESS_OR_EQ:
      case GREATER_OR_EQ:{
        choice_atom();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void body() throws ParseException {/*@bgen(jjtree) BODY */
  SimpleNode jjtn000 = new SimpleNode(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      conjunction();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void disjunction() throws ParseException {/*@bgen(jjtree) DISJUNCTION */
  SimpleNode jjtn000 = new SimpleNode(JJTDISJUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      classic_literal();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case HEAD_SEPARATOR:{
        jj_consume_token(HEAD_SEPARATOR);
        disjunction();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void conjunction() throws ParseException {/*@bgen(jjtree) CONJUNCTION */
  SimpleNode jjtn000 = new SimpleNode(JJTCONJUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(3)) {
        naf_literal();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NAF:
        case ID:
        case SYMBOLIC_COSTANT:
        case VARIABLE:
        case STRING:
        case NUMBER:
        case MINUS:
        case PARAM_OPEN:
        case AGGR_COUNT:
        case AGGR_SUM:
        case AGGR_MAX:
        case AGGR_MIN:
        case ANON_VAR:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case NAF:{
            jj_consume_token(NAF);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            ;
          }
          aggregate_atom();
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BODY_TERM_SEPARATOR:{
        jj_consume_token(BODY_TERM_SEPARATOR);
        conjunction();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void choice_atom() throws ParseException {/*@bgen(jjtree) CHOICE_ATOM */
  SimpleNode jjtn000 = new SimpleNode(JJTCHOICE_ATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:
      case UNEQUAL:
      case LESS:
      case GREATER:
      case LESS_OR_EQ:
      case GREATER_OR_EQ:{
        binop();
        term();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(CURLY_OPEN);
      choice_elements();
      jj_consume_token(CURLY_CLOSE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:
      case UNEQUAL:
      case LESS:
      case GREATER:
      case LESS_OR_EQ:
      case GREATER_OR_EQ:{
        binop();
        term();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void choice_elements() throws ParseException {/*@bgen(jjtree) CHOICE_ELEMENTS */
  SimpleNode jjtn000 = new SimpleNode(JJTCHOICE_ELEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      choice_element();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
        choice_elements();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void choice_element() throws ParseException {/*@bgen(jjtree) CHOICE_ELEMENT */
  SimpleNode jjtn000 = new SimpleNode(JJTCHOICE_ELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      atom();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COLON:{
        jj_consume_token(COLON);
        naf_literals();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void binop() throws ParseException {/*@bgen(jjtree) BINOP */
  SimpleNode jjtn000 = new SimpleNode(JJTBINOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        jj_consume_token(EQUAL);
        break;
        }
      case UNEQUAL:{
        jj_consume_token(UNEQUAL);
        break;
        }
      case LESS:{
        jj_consume_token(LESS);
        break;
        }
      case GREATER:{
        jj_consume_token(GREATER);
        break;
        }
      case LESS_OR_EQ:{
        jj_consume_token(LESS_OR_EQ);
        break;
        }
      case GREATER_OR_EQ:{
        jj_consume_token(GREATER_OR_EQ);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void arithop() throws ParseException {/*@bgen(jjtree) ARITHOP */
  SimpleNode jjtn000 = new SimpleNode(JJTARITHOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      case TIMES:{
        jj_consume_token(TIMES);
        break;
        }
      case DIV:{
        jj_consume_token(DIV);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void aggregate_atom() throws ParseException {/*@bgen(jjtree) AGGREGATE_ATOM */
  SimpleNode jjtn000 = new SimpleNode(JJTAGGREGATE_ATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(5)) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:
        case SYMBOLIC_COSTANT:
        case VARIABLE:
        case STRING:
        case NUMBER:
        case MINUS:
        case PARAM_OPEN:
        case ANON_VAR:{
          term();
          binop();
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        aggregate_function();
        jj_consume_token(CURLY_OPEN);
        aggregate_elements();
        jj_consume_token(CURLY_CLOSE);
        binop();
        term();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:
        case SYMBOLIC_COSTANT:
        case VARIABLE:
        case STRING:
        case NUMBER:
        case MINUS:
        case PARAM_OPEN:
        case ANON_VAR:{
          term();
          binop();
          aggregate_function();
          jj_consume_token(CURLY_OPEN);
          aggregate_elements();
          jj_consume_token(CURLY_CLOSE);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case EQUAL:
          case UNEQUAL:
          case LESS:
          case GREATER:
          case LESS_OR_EQ:
          case GREATER_OR_EQ:{
            binop();
            term();
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            ;
          }
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void aggregate_elements() throws ParseException {/*@bgen(jjtree) AGGREGATE_ELEMENTS */
  SimpleNode jjtn000 = new SimpleNode(JJTAGGREGATE_ELEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      aggregate_element();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
        aggregate_elements();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void aggregate_element() throws ParseException {/*@bgen(jjtree) AGGREGATE_ELEMENT */
  SimpleNode jjtn000 = new SimpleNode(JJTAGGREGATE_ELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      basic_terms();
      jj_consume_token(COLON);
      naf_literals();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void aggregate_function() throws ParseException {/*@bgen(jjtree) AGGREGATE_FUNCTION */
  SimpleNode jjtn000 = new SimpleNode(JJTAGGREGATE_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AGGR_COUNT:{
        jj_consume_token(AGGR_COUNT);
        break;
        }
      case AGGR_MAX:{
        jj_consume_token(AGGR_MAX);
        break;
        }
      case AGGR_MIN:{
        jj_consume_token(AGGR_MIN);
        break;
        }
      case AGGR_SUM:{
        jj_consume_token(AGGR_SUM);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void atom() throws ParseException {/*@bgen(jjtree) ATOM */
  SimpleNode jjtn000 = new SimpleNode(JJTATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      predicate_name();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PARAM_OPEN:{
        jj_consume_token(PARAM_OPEN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:
        case SYMBOLIC_COSTANT:
        case VARIABLE:
        case STRING:
        case NUMBER:
        case MINUS:
        case PARAM_OPEN:
        case ANON_VAR:{
          terms();
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          ;
        }
        jj_consume_token(PARAM_CLOSE);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void builtin_atom() throws ParseException {/*@bgen(jjtree) BUILTIN_ATOM */
  SimpleNode jjtn000 = new SimpleNode(JJTBUILTIN_ATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      binop();
      term();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void classic_literal() throws ParseException {/*@bgen(jjtree) CLASSIC_LITERAL */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASSIC_LITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      atom();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void naf_literals() throws ParseException {/*@bgen(jjtree) NAF_LITERALS */
  SimpleNode jjtn000 = new SimpleNode(JJTNAF_LITERALS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      naf_literal();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BODY_TERM_SEPARATOR:{
        jj_consume_token(BODY_TERM_SEPARATOR);
        naf_literals();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }
